tests/baselines/reference/omittedExpressionForOfLoop.errors.txt
omittedExpressionForOfLoop.ts(1,19): error TS2304: Cannot find name 'doesNotExist'.
omittedExpressionForOfLoop.ts(4,19): error TS18050: The value 'undefined' cannot be used here.
omittedExpressionForOfLoop.ts(7,12): error TS2488: Type 'never' must have a '[Symbol.iterator]()' method that returns an iterator.
omittedExpressionForOfLoop.ts(10,12): error TS2488: Type 'never' must have a '[Symbol.iterator]()' method that returns an iterator.


==== omittedExpressionForOfLoop.ts (4 errors) ====
    for (const [,] of doesNotExist) {
                      ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'doesNotExist'.
    }
    
    for (const [,] of undefined) {
                      ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    }
    
    for (const [,] of []) {
               ~~~
!!! error TS2488: Type 'never' must have a '[Symbol.iterator]()' method that returns an iterator.
    }
    
    for (const [] of []) {
               ~~
!!! error TS2488: Type 'never' must have a '[Symbol.iterator]()' method that returns an iterator.
    }